website/code/chameneos-gcj-2.log
BUILD COMMANDS FOR: chameneos.gcj-2.gcj

Tue Jan 16 16:14:27 PST 2007

/usr/bin/gcj-4.1 -O3 -fomit-frame-pointer -march=athlon-tbird  -o chameneos.gcj-2.gcj_run --main=chameneos chameneos.java
chameneos.java:17: error: Invalid declaration.
	public enum Colour {
                              ^
chameneos.java:18: error: ':' expected.
		RED, BLUE, YELLOW, FADED
                      ^
chameneos.java:107: error: .
	public chameneos(int n) throws InterruptedException {
           ^
chameneos.java:13: error: .
	public static final Colour[] COLOURS = { Colour.BLUE, Colour.RED, Colour.YELLOW, Colour.BLUE };
                               ^
chameneos.java:24: error: .
		private Colour colour;
                           ^
chameneos.java:26: error: .
		private Colour other;
                           ^
chameneos.java:28: error: .
		public Creature(Colour c, MeetingPlace mp) {
                                   ^
chameneos.java:49: error: .
		private Colour complement(Colour other) {
                                             ^
chameneos.java:49: error: .
		private Colour complement(Colour other) {
                           ^
chameneos.java:68: error: .
		public Colour getColour() {
                          ^
chameneos.java:72: error: .
		public void setOther(Colour other) throws InterruptedException {
                                        ^
11 errors
make[1]: [chameneos.gcj-2.gcj_run] Error 1 (ignored)
rm chameneos.gcj-2.gcj

=================================================================
COMMAND LINE (%A is single numeric argument):

chameneos.gcj-2.gcj_run %A
Error, could not exec chameneos.gcj-2.gcj_run 10000 (No such file or directory)
PATH=/opt/shootout/shootout/bench/chameneos:/opt/shootout/shootout/bench/chameneos/tmp:/home/brent/bin:/usr/local/bin:/usr/bin:/bin:/usr/bin/X11:/usr/games
TEST FAILED - Child processed exited with error code (1)
Error, could not exec  (Inappropriate ioctl for device)
PATH=/opt/shootout/shootout/bench/chameneos:/opt/shootout/shootout/bench/chameneos/tmp:/home/brent/bin:/usr/share/smlnj/bin:/usr/local/bin:/usr/bin:/bin:/usr/bin/X11:/usr/games
TEST FAILED - Child processed exited with error code (1)


PROGRAM OUTPUT
==============
